tests/NormalTests/paczka1/fuzzy1/83895013.err
Error in line 18: jB6mRcloE A492 1,0
Error in line 24: VjoOsP A875 33,9
